...
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/e_mail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_content_small"
            android:hint="@string/username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_content_small"
            android:hint="@string/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/imap_server"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextImapServer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_content_small"
            android:hint="@string/imap_port"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextImapPort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
            android:layout_height="wrap_content"
            android:text="@string/security_type"
            app:layout_constraintBottom_toBottomOf="@+id/spinnerImapSecurityType"
            app:layout_constraintStart_toStartOf="@+id/layoutImapPort"
            app:layout_constraintTop_toTopOf="@+id/spinnerImapSecurityType" />
...
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/smtp_server"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextSmtpServer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_content_small"
            android:hint="@string/smtp_port"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextSmtpPort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
            android:layout_height="wrap_content"
            android:text="@string/security_type"
            app:layout_constraintBottom_toBottomOf="@+id/spinnerSmtpSecyrityType"
            app:layout_constraintStart_toStartOf="@+id/layoutSmtpPort"
            app:layout_constraintTop_toTopOf="@+id/spinnerSmtpSecyrityType" />
...

        <CheckBox
            android:id="@+id/checkBoxRequireSignInForSmtp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_content_small"
                android:hint="@string/smtp_username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextSmtpUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_content_small"
                android:hint="@string/smtp_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextSmtpPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/buttonTryToConnect"
            style="@style/AppWidget.Button"
            android:layout_width="match_parent"
...
