...
    <string name="support_email" translatable="false">human@flowcrypt.com</string>

    <string name="compose">Compose</string>
    <string name="prompt_subject">Subject</string>
    <string name="prompt_compose_security_email">Compose secure message</string>
    <string name="prompt_compose_standard_email">Compose standard message</string>
    <string name="text_must_not_be_empty">Error: \"%1$s\" must not be empty!</string>
    <string name="send">Send</string>
    <string name="error_email_is_not_valid">Error: invalid email</string>
    <string name="internet_connection_is_not_available">Error: no internet</string>
    <string name="unknown_error">Unknown error</string>
    <string name="privacy">Privacy</string>
    <string name="terms">Terms</string>
    <string name="security">Security</string>
    <string name="security_and_privacy">Security and Privacy</string>
...
    <string name="reply">Reply</string>
    <string name="import_public_key">Import Public Key</string>
    <string name="private_">Private</string>
    <string name="public_">Public</string>
    <string name="attachment">Attachment</string>
    <string name="can_not_connect_to_the_server">Cannot connect to the server</string>
    <string name="cancel">Cancel</string>
    <string name="waiting_to_load">Waiting to load</string>
    <string name="download_complete">Download complete</string>
    <string name="template_attachment_already_loading">Attachment \"%1$s\" is already loading</string>
    <string name="can_not_attach_this_file">Can\'t attach this file!</string>
    <string name="template_warning_max_total_attachments_size">Total size of added attachments should be under
        %1$s</string>
...
    <string name="access_was_not_granted">Access was not granted</string>
    <string name="can_not_send_due_to_auth_failure">Can\'t send message: auth failure</string>
    <string name="mark_read">Mark read</string>
    <string name="selection_text">Selected: %1$d</string>
    <string name="marked_for_archiving">Marked for archiving</string>
    <string name="undo">Undo</string>
    <string name="network_error">Network error</string>
    <string name="error_no_keys">Error: no keys</string>
    <string name="could_not_load_private_keys">Couldn\'t load private keys</string>
    <string name="partially_encrypted_private_key_error_msg">Some of the provided Private Keys is a partially encrypted private key (some packets are encrypted, some not). Such keys are not supported and will be skipped. Please only import fully encrypted keys, with the same pass phrase for all secret packets.</string>
    <string name="file_is_too_big">The file is too big</string>
    <string name="source_is_empty_or_not_available">The source is empty or not available</string>
    <string name="parsing_keys_please_wait">Parsing keys, please wait</string>
...
