...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutContentView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewTitle"
        style="@style/ScreenHeading"
        android:layout_width="0dp"
        android:text="@string/import_public_key"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
...
